--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
       <div class="card-white" id="introduction"> 
         <h1>Hi, I'm ELEA, welcome to my profile!</h1>
-	    <img src="images/profilephoto.jpg" alt="me" width="250px">
+	    <img src="images/profilephoto.png" width="250px">
 	    <p>
 
 	    I am student at the business school EMLV based in La Defense. I signed up for both ski and volley ball club. I play tennis and sail during the summer. I love Formula 1, cinematography and criminology. My favourite music is british rap especially Central CEE.
